re PR c++/16696 (Strange message when operator++ not found)

2009-08-04  Manuel López-Ibáñez  <manu@gcc.gnu.org>

	PR c++/16696
cp/
	* call.c (build_new_op): Only try prefix operator if -fpermissive,
	otherwise just error.
testsuite/
	* g++.dg/parse/pr16696.C: New.
	* g++.dg/parse/pr16696-permissive.C: New.

From-SVN: r150461